--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "eslint-config-zyhou": "^0.0.6",
         "husky": "^4.2.5",
         "lint-staged": "^10.2.11",
-        "prettier": "^2.0.5"
+        "postcss-preset-env": "^6.7.0",
+        "prettier": "^2.0.5",
+        "tailwindcss": "^1.6.2"
     },
     "husky": {
         "hooks": {
