--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "next build",
         "export": "next export",
         "start": "next start",
+        "doctoc": "doctoc ./.github/CONTRIBUTING.md",
         "lint": "eslint .",
         "format": "prettier --write --check \"**/*.+(js|md|json)\""
     },
@@ -17,6 +18,7 @@
         "react-dom": "16.13.1"
     },
     "devDependencies": {
+        "doctoc": "^1.4.0",
         "eslint": "^7.6.0",
         "eslint-config-zyhou": "^0.0.6",
         "husky": "^4.2.5",
