add talks listing page and detail page

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     },
     "dependencies": {
         "@mdx-js/loader": "^1.6.16",
+        "@mdx-js/runtime": "^1.6.16",
         "@next/mdx": "^9.5.2",
+        "@tailwindcss/typography": "^0.2.0",
         "fast-glob": "^3.2.4",
         "gray-matter": "^4.0.2",
         "next": "9.5.2",
