--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
-blank_issues_enabled: false
+blank_issues_enabled: true
 contact_links:
     - name: 📝 Code of Conduct
       url: https://github.com/aperowebnancy/aperowebnancy-website/blob/main/.github/CODE_OF_CONDUCT.md
