--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "next": "9.5.2",
         "prop-types": "^15.7.2",
         "react": "16.13.1",
-        "react-dom": "16.13.1"
+        "react-dom": "16.13.1",
+        "sass": "^1.26.11"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.11.4",
