--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
+        "test:watch": "jest --watch",
+        "test": "jest",
         "build": "next build",
         "postbuild": "next-sitemap",
         "export": "next export && yarn build:rss",
@@ -26,11 +28,16 @@
         "react-dom": "16.13.1"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.0.4",
+        "babel-jest": "^26.5.0",
         "doctoc": "^1.4.0",
         "eslint": "^7.6.0",
         "eslint-config-zyhou": "^0.0.6",
         "eslint-plugin-mdx": "^1.8.1",
+        "eslint-plugin-testing-library": "^3.9.0",
         "husky": "^4.2.5",
+        "jest": "^26.5.0",
         "lint-staged": "^10.2.11",
         "next-sitemap": "^1.2.4",
         "postcss-preset-env": "^6.7.0",
