--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "eslint-config-zyhou": "^0.0.6",
         "eslint-plugin-mdx": "^1.8.1",
         "eslint-plugin-testing-library": "^3.9.0",
+        "full-icu": "^1.3.1",
         "husky": "^4.2.5",
         "jest": "^26.5.0",
         "lint-staged": "^10.2.11",
