--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "next dev",
         "test:watch": "jest --watch",
-        "test": "jest",
+        "test": "NODE_ICU_DATA=node_modules/full-icu jest",
         "build": "next build",
         "postbuild": "next-sitemap",
         "export": "next export && yarn build:rss",
