--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
         "eslint-plugin-testing-library": "^3.9.0",
         "full-icu": "^1.3.1",
         "husky": "^4.2.5",
+        "isomorphic-unfetch": "^3.1.0",
         "jest": "^26.5.0",
         "lint-staged": "^10.2.11",
+        "msw": "^0.21.2",
         "next-sitemap": "^1.2.4",
         "postcss-preset-env": "^6.7.0",
         "prettier": "^2.0.5",
