--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "test:watch": "NODE_ICU_DATA=node_modules/full-icu jest --watch",
-        "test": "NODE_ICU_DATA=node_modules/full-icu jest",
+        "test:watch": "jest --watch",
+        "test": "jest",
         "build": "next build",
         "postbuild": "next-sitemap",
         "export": "next export && yarn build:rss",
@@ -37,7 +37,6 @@
         "eslint-config-zyhou": "^0.0.6",
         "eslint-plugin-mdx": "^1.8.1",
         "eslint-plugin-testing-library": "^3.9.0",
-        "full-icu": "^1.3.1",
         "husky": "^4.2.5",
         "isomorphic-unfetch": "^3.1.0",
         "jest": "^26.5.0",
